# claude-config

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
claude_config/: __init__.py  claude_md_updater.py  config_generator.py  handoff_generator.py  hooks_manager.py  main.py  pattern_extractor.py
src/: __init__.py  claude_md_updater.py  config_generator.py  log_analyzer.py  main.py  pattern_extractor.py
tests/: __init__.py  test_claude_md_updater.py  test_config_generator.py  test_handoff_generator.py  test_hooks_manager.py  test_log_analyzer.py  test_pattern_extractor.py
