[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-config"
version = "0.1.0"
description = "Claude Code를 나에게 맞게 튜닝하는 도구"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "BESSL", email = "hello@bessl.co"}
]
keywords = ["claude", "claude-code", "ai", "llm", "config", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/bessl-co/claude-config"
Documentation = "https://github.com/bessl-co/claude-config#readme"
Repository = "https://github.com/bessl-co/claude-config"
Issues = "https://github.com/bessl-co/claude-config/issues"

[project.scripts]
claude-config = "claude_config.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-dir]
claude_config = "src"
