[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-config"
version = "0.1.0"
description = "Claude Code를 나에게 맞게 튜닝하는 도구"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "BESSL", email = "hello@bessl.co"}
]
keywords = ["claude", "claude-code", "ai", "llm", "config", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/bessl-co/claude-config"
Documentation = "https://github.com/bessl-co/claude-config#readme"
Repository = "https://github.com/bessl-co/claude-config"
Issues = "https://github.com/bessl-co/claude-config/issues"

[project.scripts]
claude-config = "claude_config.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_config*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=claude_config --cov-report=term-missing"
